@@ -12,8 +12,8 @@
     </parent>
 
     <properties>
-        <maven.compiler.release>22</maven.compiler.release>
-        <java.version>22</java.version>
+        <maven.compiler.release>17</maven.compiler.release>
+        <java.version>17</java.version>
     </properties>
 
     <groupId>ru.shop2024</groupId>
@@ -25,9 +25,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -41,7 +40,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.2.5</version>
+            <version>3.1.5</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -57,7 +56,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>3.2.3</version>
+            <version>3.1.5</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
